<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="?attr/actionBarSize"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.jacko1972.popularmovies2.MovieDetailFragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_padding">

            <ImageView
                android:id="@+id/poster_image_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_poster_image_height"
                android:contentDescription="@string/poster_image"
                app:srcCompat="@mipmap/ic_launcher"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                cardView:cardCornerRadius="8dp"
                cardView:cardElevation="4dp"
                cardView:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/movie_detail_image_view"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/image_height"
                        android:layout_weight="4"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_image"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="6"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/release_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            />

                        <TextView
                            android:id="@+id/release_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/detail_text_view_spacing"
                            android:textSize="30sp"/>

                        <TextView
                            android:id="@+id/user_rating_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_rating"
                            />

                        <TextView
                            android:id="@+id/user_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/detail_text_view_spacing"
                            android:textSize="30sp"/>

                        <TextView
                            android:id="@+id/vote_count_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_count"
                            />

                        <TextView
                            android:id="@+id/vote_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/detail_text_view_spacing"
                            android:textSize="30sp"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/trailer_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/detail_text_view_spacing"
                android:paddingStart="@dimen/detail_text_view_spacing"
                android:paddingTop="@dimen/detail_text_view_spacing"
                android:text="@string/trailers"
                android:textStyle="normal|bold"/>

            <android.support.v7.widget.CardView
                android:id="@+id/trailer_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                cardView:cardCornerRadius="8dp"
                cardView:cardElevation="4dp"
                cardView:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.jacko1972.popularmovies2.util.RecyclerViewWithEmptyView
                        android:id="@+id/trailer_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/trailer_empty_view"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/no_trailers"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/synopsis_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/detail_text_view_spacing"
                android:paddingStart="@dimen/detail_text_view_spacing"
                android:paddingTop="@dimen/detail_text_view_spacing"
                android:text="@string/synopsis"
                android:textStyle="normal|bold"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                cardView:cardCornerRadius="8dp"
                cardView:cardElevation="4dp"
                cardView:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/detail_text_view_spacing"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingTop="@dimen/detail_text_view_spacing"
                android:text="@string/reviews"
                android:textStyle="normal|bold"/>



                <LinearLayout
                    android:id="@+id/review_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.jacko1972.popularmovies2.util.RecyclerViewWithEmptyView
                        android:id="@+id/review_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/review_list_item"/>
                    <android.support.v7.widget.CardView
                        android:id="@+id/review_empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        cardView:cardCornerRadius="8dp"
                        cardView:cardElevation="4dp"
                        cardView:cardUseCompatPadding="true">
                    <TextView
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/no_reviews"/>
                    </android.support.v7.widget.CardView>

                </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_favorite_border_white_24dp"/>
</android.support.design.widget.CoordinatorLayout>